--- a/market/templatesMarket/marketPage.html
+++ b/market/templatesMarket/marketPage.html
@@ -1,1 +1,68 @@
-<h1>HI</h1>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'css/marketStyle.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <title>Tienda</title>
+  </head>
+  <body>
+    <!-- Navegación -->
+    <div class="container">
+      <!-- Contacto -->
+      <div class="header">
+        <p>Contáctanos: 313666777</p>
+      </div>
+
+      <!-- Logo y Barra de Búsqueda -->
+      <div class="sidebar">
+        <img src="/media/products/Logo.jpeg" alt="Logo" width="300" height="300" />
+        <div class="search-container">
+            <input type="text" placeholder="Buscar..." />
+            <button>Buscar</button>
+        </div>
+    </div>
+
+      <div class="nav">
+        <nav>
+          <ul>
+            
+            <li><a href="#"><i class="fa-brands fa-searchengin"></i>Buscar</a></li>
+            <li><a href="#"><i class="fa-solid fa-list"></i>Catálogo</a></li>
+            <li><a href="#"><i class="fa-brands fa-osi"></i>Inicio</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Contenido Principal -->
+      <div class="main-products">
+        <div class="heaeder-products">
+          <h2>Productos</h2>
+          <p>Aquí se mostrarán los productos disponibles.</p>
+        </div>
+
+        <div class="pinatas">
+          <p>Hola 1</p>
+        </div>
+
+        <div class="porcelanicron">
+          <p>Hola 2</p>
+        </div>
+
+        <div class="stickers">
+          <p>Hola 3</p>
+        </div>
+
+        <div class="toppers">
+          <p>Hola 4</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
