aplicacion de diseño a la ventana principal

--- a/market/templatesMarket/marketPage.html
+++ b/market/templatesMarket/marketPage.html
@@ -22,12 +22,8 @@
 
       <!-- Logo y Barra de Búsqueda -->
       <div class="sidebar">
-        <img
-          src="/media/products/Logo.jpeg"
-          alt="Logo"
-          width="300"
-          height="300"
-        />
+        <img src="/media/Logos/Logo.jpeg" alt="Logo" width="300" height="300" />
+        <p class="welcome-message">¡Bienvenidos a la Piñatería!</p>
         <div class="search-container">
           <input
             type="text"
@@ -43,13 +39,19 @@
         <nav>
           <ul>
             <li>
-              <a href="#"><i class="fa-brands fa-searchengin"></i>Buscar</a>
+              <a href="#" id="search-Nav"
+                ><i class="fa-brands fa-searchengin"></i>Buscar</a
+              >
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-list"></i>Catálogo</a>
+              <a href="#" id="catalog-Nav"
+                ><i class="fa-solid fa-list"></i>Catálogo</a
+              >
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-osi"></i>Inicio</a>
+              <a href="#" id="main-Nav"
+                ><i class="fa-brands fa-osi"></i>Inicio</a
+              >
             </li>
           </ul>
         </nav>
@@ -63,11 +65,35 @@
         </div>
 
         <div class="pinatas">
-          <p>Hola 1</p>
+          <h1>Piñatas</h1>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/adultos.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/niña.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/niño.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
         </div>
 
         <div class="porcelanicron">
-          <p>Hola 2</p>
+          <p>Porcelanicron</p>
         </div>
 
         <div class="stickers">
