arreeglos vista principal

--- a/market/templatesMarket/marketPage.html
+++ b/market/templatesMarket/marketPage.html
@@ -69,7 +69,7 @@
 
           <a href="/market-search/?search=piñata&page=1"
             ><img
-              src="/media/Logos/adultos.jpeg"
+              src="/media/Logos/niño.jpeg"
               alt="Logo"
               width="300"
               height="300"
@@ -85,7 +85,7 @@
 
           <a href="/market-search/?search=piñata&page=1"
             ><img
-              src="/media/Logos/niño.jpeg"
+              src="/media/Logos/adultos.jpeg"
               alt="Logo"
               width="300"
               height="300"
@@ -93,15 +93,137 @@
         </div>
 
         <div class="porcelanicron">
-          <p>Porcelanicron</p>
+          <h1>Porcelanicron</h1>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/matrimonio.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/quinceañeras.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/personajesAnimados.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/profesiones.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/primeraComunion.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/grado.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
         </div>
 
         <div class="stickers">
-          <p>Hola 3</p>
+          <h1>Stickers</h1>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/niño.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/niña.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/adultos.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
         </div>
 
         <div class="toppers">
-          <p>Hola 4</p>
+          <h1>Toppers</h1>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/felizCumpleaños.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/felizDia.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/amorAniversario.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/grado.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/primeraComunion.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
+
+          <a href="/market-search/?search=piñata&page=1"
+            ><img
+              src="/media/Logos/numeros.jpeg"
+              alt="Logo"
+              width="300"
+              height="300"
+          /></a>
         </div>
       </div>
     </div>
