Cambio de modelo para la base de datos

--- a/APIMain/templatesAdmin/createProduct.html
+++ b/APIMain/templatesAdmin/createProduct.html
@@ -23,10 +23,24 @@
             <input type="text" name="name" id="name" placeholder="Nombre" required />
             <textarea type="text" name="description" id="description" placeholder="Descripcion" required></textarea>
             <select name="category" id="category" required>
-            <option value="piñatas">piñatas</option>
-            <option value="muñecos">muñecos</option>
-            <option value="stickers">stickers</option>
-            <option value="others">Otro</option>
+              <option value="piñatas-niño">piñatas-niño</option>
+              <option value="piñatas-niña">piñatas-niña</option>
+              <option value="piñatas-adulto">piñatas-adulto</option>
+              <option value="porcelanicron-matrimonio">porcelanicron-matrimonio</option>
+              <option value="porcelanicron-quinceañeras">porcelanicron-quinceañeras</option>
+              <option value="porcelanicron-animados">porcelanicron-animados</option>
+              <option value="porcelanicron-profesiones">porcelanicron-profesiones</option>
+              <option value="porcelanicron-comunion">porcelanicron-comunion</option>
+              <option value="porcelanicron-grados">porcelanicron-grados</option>
+              <option value="stickers-niño">stickers-niño</option>
+              <option value="stickers-niña">stickers-niña</option>
+              <option value="stickers-adulto">stickers-adulto</option>
+              <option value="toppers-cumpleanos">toppers-cumpleanos</option>
+              <option value="toppers-feliz-dia">toppers-feliz-dia</option>
+              <option value="toppers-aniversario">toppers-aniversario</option>
+              <option value="toppers-grados">toppers-grados</option>
+              <option value="toppers-comunion">toppers-comunion</option>
+              <option value="toppers-numeros">toppers-numeros</option>
             </select>
             <input type="text" name="price" id="price" placeholder="Precio" required/>
             <input type="text" name="stock" id="stock" placeholder="stock" required/>
