--- a/market/templatesMarket/search_products.html
+++ b/market/templatesMarket/search_products.html
@@ -5,11 +5,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/productsStyles.css' %}" />
     <title>Market Search</title>
 </head>
 <body>
 
+    <!-- Navbar -->
+    <div class="nav">
+        <nav>
+            <ul>
+                <li>
+                    <a href="/market-search" id="search-Nav">
+                        <i class="fa-brands fa-searchengin"></i> Buscar
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="catalog-Nav">
+                        <i class="fa-solid fa-list"></i> Catálogo
+                    </a>
+                </li>
+                <li>
+                    <a href="/market" id="main-Nav">
+                        <i class="fa-brands fa-osi"></i> Inicio
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
     <h1>Buscar productos</h1>
+    <h2 id="results-header"></h2>
     <input type="text" id="search" placeholder="Busca productos...">
     <button id="btn-search">Buscar</button>
 
@@ -19,6 +44,8 @@
     <!-- Botones de paginación -->
     <button id="prev-button" class="pagination-button" data-page="">Anterior</button>
     <button id="next-button" class="pagination-button" data-page="">Siguiente</button>
+
     <script src="{% static 'js/filterproductsMP.js' %}"></script>
+
 </body>
 </html>
