Correcion de base de datos y diseño

--- a/market/templatesMarket/marketPage.html
+++ b/market/templatesMarket/marketPage.html
@@ -17,7 +17,7 @@
     <div class="container">
       <!-- Contacto -->
       <div class="header">
-        <p>Contáctanos: 313666777</p>
+        <p>Contáctanos: 3137443590</p>
       </div>
 
       <!-- Logo y Barra de Búsqueda -->
@@ -67,7 +67,7 @@
         <div class="pinatas">
           <h1>Piñatas</h1>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=piñatas-niño&page=1"
             ><img
               src="/media/Logos/niño.jpeg"
               alt="Logo"
@@ -75,7 +75,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=piñatas-niña&page=1"
             ><img
               src="/media/Logos/niña.jpeg"
               alt="Logo"
@@ -83,7 +83,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=piñatas-adulto&page=1"
             ><img
               src="/media/Logos/adultos.jpeg"
               alt="Logo"
@@ -95,7 +95,7 @@
         <div class="porcelanicron">
           <h1>Porcelanicron</h1>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-matrimonio&page=1"
             ><img
               src="/media/Logos/matrimonio.jpeg"
               alt="Logo"
@@ -103,7 +103,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-quinceañeras&page=1"
             ><img
               src="/media/Logos/quinceañeras.jpeg"
               alt="Logo"
@@ -112,7 +112,7 @@
           /></a>
 
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-animados&page=1"
             ><img
               src="/media/Logos/personajesAnimados.jpeg"
               alt="Logo"
@@ -120,7 +120,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-profesiones&page=1"
             ><img
               src="/media/Logos/profesiones.jpeg"
               alt="Logo"
@@ -128,7 +128,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-comunion&page=1"
             ><img
               src="/media/Logos/primeraComunion.jpeg"
               alt="Logo"
@@ -136,7 +136,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=porcelanicron-grados&page=1"
             ><img
               src="/media/Logos/grado.jpeg"
               alt="Logo"
@@ -149,7 +149,7 @@
         <div class="stickers">
           <h1>Stickers</h1>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=stickers-niño&page=1"
             ><img
               src="/media/Logos/niño.jpeg"
               alt="Logo"
@@ -157,7 +157,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=stickers-niña&page=1"
             ><img
               src="/media/Logos/niña.jpeg"
               alt="Logo"
@@ -165,7 +165,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=stickers-adulto&page=1"
             ><img
               src="/media/Logos/adultos.jpeg"
               alt="Logo"
@@ -177,7 +177,7 @@
         <div class="toppers">
           <h1>Toppers</h1>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-cumpleanos&page=1"
             ><img
               src="/media/Logos/felizCumpleaños.jpeg"
               alt="Logo"
@@ -185,7 +185,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-feliz-dia&page=1"
             ><img
               src="/media/Logos/felizDia.jpeg"
               alt="Logo"
@@ -193,7 +193,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-aniversario&page=1"
             ><img
               src="/media/Logos/amorAniversario.jpeg"
               alt="Logo"
@@ -201,7 +201,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-grados&page=1"
             ><img
               src="/media/Logos/grado.jpeg"
               alt="Logo"
@@ -209,7 +209,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-comunion&page=1"
             ><img
               src="/media/Logos/primeraComunion.jpeg"
               alt="Logo"
@@ -217,7 +217,7 @@
               height="300"
           /></a>
 
-          <a href="/market-search/?search=piñata&page=1"
+          <a href="/market-search/?search=toppers-numeros&page=1"
             ><img
               src="/media/Logos/numeros.jpeg"
               alt="Logo"
